# algebra_kit

./: Cargo.toml
src/: algebra.rs  lib.rs  std_impls.rs
